force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__CareRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareRequestId__c</fullName>
    <label>Care Request</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CareRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>