force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__CodeDescriptionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodeDescriptionText__c</fullName>
    <label>Code Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodeDescriptionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>