force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DiagnosisCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosisCodeId__c</fullName>
    <label>Diagnosis Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosisCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>