force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DiagnosisCodeSetObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosisCodeSetObject__c</fullName>
    <label>Diagnosis Code Set Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosisCodeSetObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>