force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DiagnosisEffectiveDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosisEffectiveDateTime__c</fullName>
    <label>Diagnosis Effective Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosisEffectiveDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>