force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DischargeCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__DischargeCode__c</fullName>
    <label>Discharge Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DischargeCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>