force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DischargeCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__DischargeCodeDescription__c</fullName>
    <label>Discharge Code Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DischargeCodeDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>