force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DischargeDiagnosisCodeSetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DischargeDiagnosisCodeSetId__c</fullName>
    <label>Discharge Diagnostic Code Set</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DischargeDiagnosisCodeSetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>