force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DischargeDiagnosisEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__DischargeDiagnosisEndDateTime__c</fullName>
    <label>Discharge Diagnosis End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DischargeDiagnosisEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>