force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__DischargeDiagnosticCodeSetObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__DischargeDiagnosticCodeSetObject__c</fullName>
    <label>Discharge Diagnostic Code Set Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DischargeDiagnosticCodeSetObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>