force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__IsDischargeDiagnosisPrimary__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDischargeDiagnosisPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Discharge Diagnosis Primary</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDischargeDiagnosisPrimary</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>