force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__ModifiedCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModifiedCode__c</fullName>
    <label>Modified Code</label>
    <length>32</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModifiedCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>