force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__ModifiedCodeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModifiedCodeType__c</fullName>
    <label>Modified Code Type</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModifiedCodeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>