force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__ModifiedDiagnosisCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModifiedDiagnosisCodeId__c</fullName>
    <label>Modified Diagnosis Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModifiedDiagnosisCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>