force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__ModifiedDiagnosisCodeSetObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModifiedDiagnosisCodeSetObject__c</fullName>
    <label>Modified Diagnosis Code Set Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModifiedDiagnosisCodeSetObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>