force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__ModifiedDiagnosisEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModifiedDiagnosisEndDate__c</fullName>
    <label>Modified Diagnosis End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModifiedDiagnosisEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>