force-app/main/default/objects/ssot__CareRequestDiagnosis__dlm/fields/ssot__rel_1716576509540_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716576509540_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareRequestDiagnosis_ModifiedDiagnos_rel</label>
    <referenceTo>ssot__HealthcareDiagnosis__dlm</referenceTo>
    <relationshipLabel>CareRequestDiagnosis_ModifiedDiagnos_rel</relationshipLabel>
    <relationshipName>rel_1716576509540_end</relationshipName>
    <type>Lookup</type>
</CustomField>